# kellerkompanie-teamspeak3-bot

./: README.md  pyproject.toml
configs/: keko-ts3bot.yaml
debian/: changelog  control  keko-ts3bot.service  postinst  rules
docker/: build.Dockerfile
keko/ts3api/: connection.py
keko/ts3bot/: api_client.py  config.py  database.py  keko_bot.py
scripts/: deploy_deb.py
