[project]
name = "kellerkompanie-ts3bot"
version = "3.0.0"
description = "Kellerkompanie Teamspeak 3 bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.scripts]
keko-bot = "keko.ts3bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keko"]
